@@ -2,7 +2,6 @@ package com.sentientsimulations.projectzomboid.survivorlootrespawn;
 
 import static io.pzstorm.storm.logging.StormLogger.LOGGER;
 
-import com.sentientsimulations.projectzomboid.survivorlootrespawn.patch.RemoveInventoryItemFromContainerPacketPatch;
 import io.pzstorm.storm.core.StormClassTransformer;
 import io.pzstorm.storm.event.core.StormEventDispatcher;
 import io.pzstorm.storm.mod.ZomboidMod;
@@ -23,9 +22,6 @@ public class SurvivorLootRespawnMod implements ZomboidMod {
 
     @Override
     public List<StormClassTransformer> getClassTransformers() {
-        if (!StormEnv.isStormServer()) {
-            return Collections.emptyList();
-        }
-        return List.of(new RemoveInventoryItemFromContainerPacketPatch());
+        return Collections.emptyList();
     }
 }
